--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@chakra-ui/core": "^1.0.0-rc.3",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.1",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.3"
   }
 }
